# gnome-control-center

./: README.md  meson.build  meson_options.txt
.github/workflows/: build-ci.yaml
debian/patches/: 0007-sound-Allow-volume-to-be-set-above-100.patch  0016-diagnostics-Add-Whoopsie-support.patch
panels/: meson.build
panels/applications/: cc-applications-panel.c  gnome-applications-panel.desktop.in.in
panels/background/: cc-background-panel.ui  gnome-background-panel.desktop.in.in
panels/common/: cc-common-language.c  cc-common-language.h  cc-language-chooser.c  cc-language-chooser.ui
panels/connectivity/: cc-connectivity-panel.c  cc-connectivity-panel.ui  gnome-connectivity-panel.desktop.in.in  meson.build
panels/diagnostics/: cc-diagnostics-panel.c  cc-diagnostics-panel.ui  meson.build
panels/display/: cc-display-config-dbus.c  cc-display-config.c  cc-display-config.h  cc-display-settings.c  cc-display-settings.ui
panels/info-overview/: cc-info-overview-panel.c  cc-info-overview-panel.ui
panels/keyboard/: cc-keyboard-panel.c  cc-xkb-modifier-dialog.c  cc-xkb-modifier-dialog.h  cc-xkb-modifier-dialog.ui
panels/ubuntu/: appearance.css  cc-ubuntu-dock-dialog.c  cc-ubuntu-dock-dialog.ui  cc-ubuntu-panel.c  cc-ubuntu-panel.ui  gnome-ubuntu-panel.desktop.in.in  meson.build  ubuntu.gresource.xml
panels/ubuntu/bak/: cc-ubuntu-panel.c  cc-ubuntu-panel.ui  meson.build
panels/ubuntu/icons/: meson.build
po/: POTFILES.in
shell/: cc-panel-list.c  cc-panel-list.h  cc-panel-list.ui  cc-panel-loader.c  cc-shell-model.h  cc-window.c  cc-window.ui
(+48 files in other folders)
